Split kontaktoversikt.xml into two activities